# statictest

./: CMakeLists.txt  cmake_build.bat  cmake_generate.bat  main.cpp  maintest.cpp
include/: addition.h  fixture.h  mockaddition.h  mocksubstract.h  operation.h  substract.h  subtractoperation.h
src/: addition.cpp  mockaddition.cpp  mocksubstract.cpp  operation.cpp  substract.cpp  subtractoperation.cpp
vscode settings/: c_cpp_properties.json  tasks.json
